Fixing card spacing

--- a/projects/cpm-app/src/app/shared/components/cp-data-card/cp-data-card.component.scss
+++ b/projects/cpm-app/src/app/shared/components/cp-data-card/cp-data-card.component.scss
@@ -10,6 +10,13 @@
   font-family: "Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
+.card-content {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+}
+
 .card-header {
   display: flex;
   width: 100%;
